Fix scrolling when the nav menu is open on smaller screens

--- a/src/css/base.less
+++ b/src/css/base.less
@@ -161,8 +161,6 @@ body {
   line-height: 20px;
   -webkit-font-smoothing: subpixel-antialiased;
 
-  display: grid;
-  grid-template-rows: 1fr auto;
   padding-top: @header_height;
   -webkit-overflow-scrolling: touch;
 }
