--- a/src/css/nav.less
+++ b/src/css/nav.less
@@ -252,7 +252,7 @@
 }
 
 @media screen and (min-width: 1112px) and (max-width: 1383px) {
-  .dossier-nav.visible ~ main {
+  .dossier-nav.visible ~ .dossier-main > main {
     left: 0;
     transform: translateX(@nav_width);
 
